[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gravity-dca-bot"
version = "0.5.0"
description = "A configurable DCA bot for GRVT perpetual markets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "grvt-pysdk>=0.2.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "types-requests>=2.32.0",
]

[project.scripts]
gravity-dca = "gravity_dca.cli:main"
gravity-dca-dashboard = "gravity_dca.dashboard:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = [
  "src/gravity_dca/bot.py",
  "src/gravity_dca/cli.py",
  "src/gravity_dca/config.py",
  "src/gravity_dca/exchange.py",
  "src/gravity_dca/grid_bot.py",
  "src/gravity_dca/grid_recovery.py",
  "src/gravity_dca/grvt_auth.py",
  "src/gravity_dca/grvt_market.py",
  "src/gravity_dca/grvt_trading.py",
  "src/gravity_dca/momentum_bot.py",
  "src/gravity_dca/reconstruction.py",
  "src/gravity_dca/recovery.py",
  "src/gravity_dca/status_snapshot.py",
]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
